--- a/sample.html
+++ b/sample.html
@@ -5,7 +5,7 @@
 	<script src="js/appDeepLink.1.0.0.min.js"></script>
 </head>
 <body>
-	<button class="deep-link" data-deeplink="elp:///search?term=burritos">Ebates App - Sephora</button>
+	<button class="deep-link" data-deeplink="yelp:///search?term=burritos">Ebates App - Sephora</button>
 	<script>
 		$('.deep-link').appDeepLink({
 			androidAppStoreLink: 'http://market.android.com/details?id=com.yelp',
